--- a/src/components/content/ProductPage.module.css
+++ b/src/components/content/ProductPage.module.css
@@ -111,6 +111,14 @@
   margin: 0;
 }
 
+.infoContainer .read {
+  color: rgb(153, 154, 154);
+  font-size: 1.2rem;
+  padding: 0.5rem 2rem;
+  background-color: transparent;
+  border: 1px solid;
+}
+
 @media (min-width: 768px) {
   .productContainer {
     display: grid;
